@@ -3,7 +3,7 @@ TARGET=test
 all:
 	clear
 #	g++ -std=c++20 -static -g -I . -lgomp -fopenmp main.cpp -o $(TARGET)
-	clang++ -Wall -Wextra -std=c++20 -static -g -I . main.cpp -o $(TARGET)
+	clang++ -Wall -Wextra -std=c++20 -static -g -I . -I units main.cpp -o $(TARGET)
 run:
 	./test
 clean:
