@@ -100,3 +100,5 @@ TODO: подумать о переделке DataHolder/Tensor/tensormath  в А
 * добавлен отдельный тест для методов оптимизации;
 * добавлен метод AbstractTutor::clone() для замены учителя налету;
 
+* Изменен DataHolder::clone() для реализации паттерна Прототип; 
+* Соответсвующие изменеия в Learnable;
